[gd_scene load_steps=45 format=3 uid="uid://cwvasg3jv3ay8"]

[ext_resource type="Texture2D" uid="uid://brykfq200lxte" path="res://Graphics/Battle/Grid/GridIce.png" id="1"]
[ext_resource type="Script" path="res://Objects/Battle/GridObjects/Ice.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://df03n2l4edj2a" path="res://Graphics/Battle/Grid/IceAppear.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(31.4168, 20)

[sub_resource type="Animation" id="2"]
resource_name = "melt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rbmqd"]
_data = {
"melt": SubResource("2")
}

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("3")
region = Rect2(0, 0, 36, 24)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("3")
region = Rect2(36, 0, 36, 24)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("3")
region = Rect2(72, 0, 36, 24)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("3")
region = Rect2(108, 0, 36, 24)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("3")
region = Rect2(144, 0, 36, 24)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("3")
region = Rect2(180, 0, 36, 24)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("3")
region = Rect2(216, 0, 36, 24)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("3")
region = Rect2(252, 0, 36, 24)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("3")
region = Rect2(288, 0, 36, 24)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("3")
region = Rect2(324, 0, 36, 24)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("3")
region = Rect2(360, 0, 36, 24)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("3")
region = Rect2(396, 0, 36, 24)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("3")
region = Rect2(432, 0, 36, 24)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("3")
region = Rect2(468, 0, 36, 24)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("3")
region = Rect2(504, 0, 36, 24)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("3")
region = Rect2(540, 0, 36, 24)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("3")
region = Rect2(576, 0, 36, 24)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("3")
region = Rect2(612, 0, 36, 24)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("3")
region = Rect2(648, 0, 36, 24)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("3")
region = Rect2(684, 0, 36, 24)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("3")
region = Rect2(720, 0, 36, 24)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("3")
region = Rect2(756, 0, 36, 24)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("3")
region = Rect2(792, 0, 36, 24)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("3")
region = Rect2(828, 0, 36, 24)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("3")
region = Rect2(864, 0, 36, 24)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("3")
region = Rect2(900, 0, 36, 24)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("3")
region = Rect2(936, 0, 36, 24)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("3")
region = Rect2(972, 0, 36, 24)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("3")
region = Rect2(1008, 0, 36, 24)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("3")
region = Rect2(1044, 0, 36, 24)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("3")
region = Rect2(1080, 0, 36, 24)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("3")
region = Rect2(1116, 0, 36, 24)

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("3")
region = Rect2(1152, 0, 36, 24)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("3")
region = Rect2(1188, 0, 36, 24)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("3")
region = Rect2(1224, 0, 36, 24)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("3")
region = Rect2(1260, 0, 36, 24)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("3")
region = Rect2(1404, 0, 36, 24)

[sub_resource type="SpriteFrames" id="43"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": false,
"name": &"appear",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}, {
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}, {
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}, {
"duration": 1.0,
"texture": SubResource("27")
}, {
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}, {
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("42")
}],
"loop": false,
"name": &"go away",
"speed": 60.0
}]

[node name="Sprite" type="Sprite2D"]
show_behind_parent = true
texture = ExtResource("1")
script = ExtResource("2")

[node name="Area2D" type="Area2D" parent="." groups=["ice"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rbmqd")
}

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("43")
animation = &"appear"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
